tests/syntax_error/bad_method_name_after_def.jou
class Foo:
    def 69(self) -> None:  # Error: expected a method name, got an integer
        return
